# rust_web_study

./: .gitignore  Cargo.toml  README  build_android.sh
api/: Cargo.toml
api/src/api/: user.rs
common/: Cargo.toml
common/i18n/en/: common.ftl
common/src/: lib.rs
common/src/error/: error.rs  i18n_key.rs  mod.rs
common/src/i18n/: i18n.rs
common/src/log/: log.rs
common/tests/: i18n_test.rs  log_test.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/entity/: resp.rs
domain/src/model/: base.rs  cake_filling.rs  fruit.rs  mod.rs  team.rs  user.rs
i18n/: Cargo.toml
i18n/locales/: en.yml  zh-CN.yml
i18n/src/: lib.rs
i18n/tests/: lib_test.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: trans_test.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
orm/: Cargo.toml
orm/src/: lib.rs
orm/src/infra/: user.rs
orm/src/model/: cake.rs  cake_filling.rs  filling.rs  mod.rs  task.rs  user.rs  user_to_team.rs
service/: Cargo.toml
web/: Cargo.toml
web/.cargo/: config
web/src/: main.rs
