# [package]
# name = "web_study"
# version = "0.1.0"
# edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
# resolver = "2"
members=["common","macros","i18n","domain","migration","api","web"] #.
exclude =[]

# [dependencies]
