[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# json
serde = "1.0.160"
# i18n
i18n-embed = {version="0.13.8", features = ["fluent-system","desktop-requester"]}
i18n-embed-fl = {version="0.6.6"}
# 单例模式
once_cell = "1.17.1"
# 将资源文件加载到可执行文件中
rust-embed = "6.6.1"
# 用于管理Unicode语言标识符的API``
unic-langid = "0.9.1"