[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
path="./src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# json
serde = "1.0.160"
# 单例
once_cell = "1.17.0"
# 枚举转字符串
strum = "0.24"
strum_macros = "0.24"
# log
tracing = "0.1"
tracing-subscriber = "0.3.0"
tracing-appender = "0.2.2"
# i18n
# fluent-bundle = "0.15.2"
# 将资源文件加载到可执行文件中
# rust-embed = "6.6.1"
# 用于管理Unicode语言标识符的API``
# unic-langid = "0.9.1"