[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
path = "./src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common={path="../common"}
syn = "2.0"
quote = "1.0"
i18n-embed-fl = {version="0.6.6"}
