[package]
name = "orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common={path="../common"}
i18n={path="../i18n"}
migration={path="../migration"}
serde = "1.0.160"
# tokio = { version = "1.6", features = ["full"] }
sea-orm = { version = "0.11.2", features = ["sqlx-sqlite","runtime-tokio-rustls",  "macros" ] }
# sqlite
rusqlite = { version = "0.27", features = ["bundled"] }
