[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common={path="../common"}
domain={path="../domain"}
api={path="../api"}
orm={path="../orm"}
axum = "0.6.12"
tokio = { version = "1.27", features = ["full"] }
sea-orm = { version = "0.11.2", features = ["sqlx-sqlite","runtime-tokio-rustls",  "macros" ] }
